--- a/index.html
+++ b/index.html
@@ -37,9 +37,6 @@
             <ul class="nav">
               <li class="active"><a href="#">Home</a></li>
             </ul>
-            <div class="btn-group pull-right">
-                <a href="#" id="userId" class="btn"><i class="icon-user"></i> </a>
-            </div>
           </div><!--/.nav-collapse -->
         </div>
       </div>
@@ -87,7 +84,7 @@
     <script src="ext/js/jsrender.js"></script>
     <script src="ext/js/jso.js"></script>
     <script src="ext/js/bootstrap-modal.js"></script>
-    <script src="voot.js"></script>
+    <script src="js/voot.js"></script>
 
   </body>
 </html>
