new dependency installer

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     <script src="ext/js/jquery.js"></script>
     <script src="ext/js/jsrender.js"></script>
     <script src="ext/js/jso.js"></script>
-    <script src="ext/js/bootstrap-modal.js"></script>
+    <script src="ext/bootstrap/js/bootstrap.min.js"></script>
     <script src="js/voot.js"></script>
 
   </body>
