--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
     <script src="ext/js/jsrender.js"></script>
     <script src="ext/js/jso.js"></script>
     <script src="ext/bootstrap/js/bootstrap.min.js"></script>
+    <script src="config/config.js"></script>
     <script src="js/voot.js"></script>
 
   </body>
