--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>VOOT Demonstration Client</title>
+    <title>VOOT Client</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -12,6 +12,9 @@
     <style>
       body {
         padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
+      }
+      div.pagination {
+        margin: 0 auto;
       }
     </style>
     <link href="ext/bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
@@ -23,45 +26,34 @@
   </head>
 
   <body>
-
-    <div class="navbar navbar-fixed-top">
-      <div class="navbar-inner">
-        <div class="container">
-          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </a>
-          <a class="brand" href="#">VOOT Demonstration Client</a>
-          <div class="nav-collapse">
-            <ul class="nav">
-              <li class="active"><a href="#">Home</a></li>
-            </ul>
-          </div><!--/.nav-collapse -->
-        </div>
-      </div>
-    </div>
-
     <div class="container">
         <h1>Group Membership</h1>
 
-        <table class="table table-striped">
-            <tr class="header"><th>Name</th><th>Role</th></tr>
-        	<tbody id="groupList"></tbody>
+        <table class="table table-striped table-bordered">
+            <thead>
+                <tr><th>Name</th><th>Role</th></tr>
+            </thead>
+            	<tbody id="groupList">
+            </tbody>
         </table>
 
-    <div id="memberListModal" class="modal">
-        <div class="modal-header">
-            <button class="close" data-dismiss="modal">×</button>
-            <h3>Group Members</h3>
+        <div class="pagination pagination-large pagination-centered">
+            <ul id="paginationList">
+            </ul>
         </div>
-        <div class="modal-body">        
-            <table class="table table-striped">
-                <tr class="header"><th>User ID</th><th>Role</th></tr>
-            	<tbody id="memberList"></tbody>
-            </table>
+
+        <div id="memberListModal" class="modal">
+            <div class="modal-header">
+                <button class="close" data-dismiss="modal">×</button>
+                <h3>Group Members</h3>
+            </div>
+            <div class="modal-body">        
+                <table class="table table-striped">
+                    <tr class="header"><th>User ID</th><th>Role</th></tr>
+                	<tbody id="memberList"></tbody>
+                </table>
+            </div>
         </div>
-    </div>
 
     </div> <!-- /container -->
 
@@ -79,6 +71,10 @@
 		    <td>{{:id}}</td><td>{{:voot_membership_role}}</td>
 		{{/if}}
         </tr>
+    </script>
+
+    <script id="paginationEntry" type="text/x-jsrender">
+        <li><a href="#" class="pageEntry" data-page-number="{{:pageNumber}}">{{:pageNumber}}</a></li>
     </script>
 
     <!-- Le javascript
