--- a/index.html
+++ b/index.html
@@ -1,33 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
+<html>
+<head>
     <meta charset="utf-8">
-    <title>VOOT Client</title>
+    <title>Group Membership</title>
+    <!-- Bootstrap -->
+    <link href="ext/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="ext/bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
-
-    <!-- Le styles -->
-    <link href="ext/bootstrap/css/bootstrap.css" rel="stylesheet">
-    <style>
-      body {
-        padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
-      }
-      div.pagination {
-        margin: 0 auto;
-      }
-    </style>
-    <link href="ext/bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
-
-    <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
-    <!--[if lt IE 9]>
-      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-  </head>
-
-  <body>
+</head>
+<body>
     <div class="container">
         <h1>Group Membership</h1>
+
+        <div class="pagination pagination-large pagination-centered">
+            <ul id="paginationList">
+            </ul>
+        </div>
 
         <table class="table table-striped table-bordered">
             <thead>
@@ -36,11 +24,6 @@
             	<tbody id="groupList">
             </tbody>
         </table>
-
-        <div class="pagination pagination-large pagination-centered">
-            <ul id="paginationList">
-            </ul>
-        </div>
 
         <div id="memberListModal" class="modal">
             <div class="modal-header">
@@ -74,7 +57,7 @@
     </script>
 
     <script id="paginationEntry" type="text/x-jsrender">
-        <li><a href="#" class="pageEntry" data-page-number="{{:pageNumber}}">{{:pageNumber}}</a></li>
+        <li><a href="#" class="pageEntry" data-page-number="{{:pageNumber}}">{{:pageNumber+1}}</a></li>
     </script>
 
     <!-- Le javascript
