--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         <table class="table table-striped table-bordered">
             <thead>
-                <tr><th>Name</th><th>Role</th></tr>
+                <tr><th>Group</th><th>Role</th></tr>
             </thead>
             	<tbody id="groupList">
             </tbody>
@@ -31,9 +31,12 @@
                 <h3>Group Members</h3>
             </div>
             <div class="modal-body">        
-                <table class="table table-striped">
-                    <tr class="header"><th>User ID</th><th>Role</th></tr>
-                	<tbody id="memberList"></tbody>
+                <table class="table table-striped table-bordered">
+                    <thead>
+                        <tr><th>Member</th><th>Role</th></tr>
+                    </thead>
+                    	<tbody id="memberList">
+                    </tbody>
                 </table>
             </div>
         </div>
@@ -42,7 +45,7 @@
 
     <script id="groupListTemplate" type="text/x-jsrender">
         <tr>
-		    <td><a href="#memberListModal" data-toggle="modal" class="groupEntry" data-group-id="{{:id}}" title="{{:description}}">{{:title}}</a></td><td>{{:voot_membership_role}}</td>
+		    <td><a href="#memberListModal" data-toggle="modal" class="groupEntry" data-group-id="{{:id}}" title="{{:description}} ({{:id}})">{{:title}}</a></td><td>{{:voot_membership_role}}</td>
         </tr>
     </script>
 
