--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <div class="container">
         <h1>Group Membership</h1>
 
-        <div class="pagination pagination-large pagination-centered">
-            <ul id="paginationList">
+        <div class="pagination pagination-mini pagination-centered">
+            <ul id="groupPaginationList">
             </ul>
         </div>
 
@@ -31,6 +31,11 @@
                 <h3>Group Members</h3>
             </div>
             <div class="modal-body">        
+
+                <div class="pagination pagination-mini pagination-centered">
+                    <ul id="peoplePaginationList">
+                    </ul>
+                </div>
                 <table class="table table-striped table-bordered">
                     <thead>
                         <tr><th>Member</th><th>Role</th></tr>
@@ -63,9 +68,6 @@
         <li><a href="#" class="pageEntry" data-page-number="{{:pageNumber}}">{{:pageNumber+1}}</a></li>
     </script>
 
-    <!-- Le javascript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
     <script src="ext/js/jquery.js"></script>
     <script src="ext/js/jsrender.js"></script>
     <script src="ext/js/jso.js"></script>
