--- a/index.html
+++ b/index.html
@@ -3,69 +3,94 @@
 <head>
     <meta charset="utf-8">
     <title>Group Membership</title>
-    <!-- Bootstrap -->
     <link href="ext/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="ext/bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
+
 <body>
     <div class="container">
-        <h1>Group Membership</h1>
 
-        <div class="pagination pagination-mini pagination-centered">
-            <ul id="groupPaginationList">
-            </ul>
+        <h1>Group Membership App</h1>
+
+        <div id="groupList">
+            <div id="groupListPagination">
+            </div>
+
+            <div id="groupListTable">
+            </div>
         </div>
 
-        <table class="table table-striped table-bordered">
-            <thead>
-                <tr><th>Group</th><th>Role</th></tr>
-            </thead>
-            	<tbody id="groupList">
-            </tbody>
-        </table>
-
-        <div id="memberListModal" class="modal">
-            <div class="modal-header">
-                <button class="close" data-dismiss="modal">×</button>
-                <h3>Group Members</h3>
-            </div>
-            <div class="modal-body">        
-
-                <div class="pagination pagination-mini pagination-centered">
-                    <ul id="peoplePaginationList">
-                    </ul>
+        <div id="memberList">
+            <div id="memberListModal" tabindex="-1" class="modal hide fade">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    <h3>Member List</h3>
                 </div>
-                <table class="table table-striped table-bordered">
-                    <thead>
-                        <tr><th>Member</th><th>Role</th></tr>
-                    </thead>
-                    	<tbody id="memberList">
-                    </tbody>
-                </table>
+                <div class="modal-body">
+                    <div id="memberListPagination">
+                    </div>
+
+                    <div id="memberListTable">
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <a href="#" class="btn" data-toggle="modal" data-target="#memberListModal">Close</a>
+                </div>
             </div>
+
         </div>
 
     </div> <!-- /container -->
 
     <script id="groupListTemplate" type="text/x-jsrender">
-        <tr>
-		    <td><a href="#memberListModal" data-toggle="modal" class="groupEntry" data-group-id="{{:id}}" title="{{:description}} ({{:id}})">{{:title}}</a></td><td>{{:voot_membership_role}}</td>
-        </tr>
+        <table class="table table-striped table-bordered">
+            <thead>
+                <tr><th>Group</th><th>Role</th></tr>
+            </thead>
+            	<tbody>
+            {{for entry}}
+                <tr>
+                    <td>
+                        <a href="#" data-group-id="{{>id}}" title="{{>description}} ({{>id}})">{{>title}}</a>
+                    </td>
+                    <td>{{>voot_membership_role}}</td>
+                </tr>
+            {{/for}}
+            </tbody>
+        </table>
     </script>
 
     <script id="memberListTemplate" type="text/x-jsrender">
-        <tr>
-		{{if displayName}}
-                    <td><span title="{{:id}}">{{:displayName}}</span></td><td>{{:voot_membership_role}}</td>
-		{{else}}
-		    <td>{{:id}}</td><td>{{:voot_membership_role}}</td>
-		{{/if}}
-        </tr>
+        <table class="table table-striped table-bordered">
+            <thead>
+                <tr><th>Member</th><th>Role</th></tr>
+            </thead>
+            <tbody>
+            {{for entry}}
+                <tr>
+                    <td>
+                        {{if displayName}}
+                            <span title="{{>id}}">{{>displayName}}</span>
+           		        {{else}}
+                            <span>{{>id}}</span>
+                        {{/if}}
+                    </td>
+                    <td>{{>voot_membership_role}}</td>
+                </tr>
+            {{/for}}
+            </tbody>
+        </table>
     </script>
 
-    <script id="paginationEntry" type="text/x-jsrender">
-        <li><a href="#" class="pageEntry" data-page-number="{{:pageNumber}}">{{:pageNumber+1}}</a></li>
+    <script id="paginationTemplate" type="text/x-jsrender">
+        <div class="pagination pagination-mini pagination-centered">
+            <ul>
+                {{for numberList}}
+                    <li><a href="#" data-group-id="{{>groupId}}" data-page-number="{{>pageNumber}}">{{>pageNumber+1}}</a></li>
+                {{/for}}
+            </ul>
+        </div>
     </script>
 
     <script src="ext/js/jquery.js"></script>
@@ -77,4 +102,3 @@
 
   </body>
 </html>
-
