also show the total number of groups and members

--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
                 </tr>
             {{/for}}
             </tbody>
+            <tfoot>
+                <tr><td colspan="2"><small>You are member of <em>{{>totalResults}}</em> groups.</small></td></tr>
+            </tfoot>
         </table>
     </script>
 
@@ -80,6 +83,9 @@
                 </tr>
             {{/for}}
             </tbody>
+            <tfoot>
+                <tr><td colspan="2"><small>This group has <em>{{>totalResults}}</em> members.</small></td></tr>
+            </tfoot>
         </table>
     </script>
 
