--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <title>Group Membership</title>
     <link href="ext/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="ext/bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
@@ -22,7 +21,7 @@
         </div>
 
         <div id="memberList">
-            <div id="memberListModal" tabindex="-1" class="modal hide fade">
+            <div id="memberListModal" tabindex="-1" class="modal hide">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                     <h3>Member List</h3>
