add lead and change title

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <body>
     <div class="container">
 
-        <h1>Group Membership App</h1>
+        <h1>Group Membership</h1>
+        <p class="lead">This application makes it possible to view the groups you are a member of and its members.</p>
 
         <div id="groupList">
             <div id="groupListPagination">
