--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Group Membership</title>
     <link href="ext/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="ext/bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet">
 </head>
 
