fix silly "you are a member of" text

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <tfoot>
                 <tr>
                     <td colspan="2">
-                        <small class="muted">You are a member of <em>{{>totalResults}}</em> {{if totalResults === 1}}group{{else}}groups{{/if}}.</small>
+                        <small class="muted">You are member of <em>{{>totalResults}}</em> {{if totalResults === 1}}group{{else}}groups{{/if}}.</small>
                     </td>
                 </tr>
             </tfoot>
