--- a/index.html
+++ b/index.html
@@ -86,6 +86,9 @@
            		        {{else}}
                             <span>{{>id}}</span>
                         {{/if}}
+                        {{if mail}}
+                            <small class="muted"><a href="mailto:{{>mail}}">{{>mail}}</a></small>
+                        {{/if}}
                     </td>
                     <td>{{>voot_membership_role}}</td>
                 </tr>
